--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HNG Task-1</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
    <div class="container">
@@ -24,7 +24,7 @@
     <p data-testid="myTrack" id="myTrack">Track: Frontend</p>
 
   <!--********************************github profile********************-->  
-    <a href="https://github.com/odeh-simon" data-testid="githubURL" id="githubURL">My Github Repository</a>
+    <a href="https://github.com/odeh-simon/Profile-page-hng" data-testid="githubURL" id="githubURL">My Github Repository</a>
 
    </div> 
 
