--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!--*******************************Date & Time*************************-->
     <div data-testid="currentDayOfTheWeek" id="currentDayOfTheWeek"></div>
     <div data-testid="currentUTCTime" id="currentUTCTime"></div>
+    <div data-testid="currentUTCTime" id="currentUTCTimeInMillisecond"></div>
 
  <!--************************Track**************************-->   
     <p data-testid="myTrack" id="myTrack">Track: Frontend</p>
