--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="container">
     <!--*****************************User name************************-->
-    <p data-testid="slackUserName" id="slackUserName"> Simon Odeh</p>
+    <p data-testid="slackUserName" id="slackUserName"> Simon_Odeh</p>
 
     <!--************************************profile image************************-->
     <picture >
