--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="container">
     <!--*****************************User name************************-->
-    <p data-testid="slackUserName" id="slackUserName"> Simon_Odeh</p>
+    <p data-testid="slackUserName" id="slackUserName"> Simon Odeh</p>
 
     <!--************************************profile image************************-->
     <picture >
@@ -19,7 +19,7 @@
     <!--*******************************Date & Time*************************-->
     <div data-testid="currentDayOfTheWeek" id="currentDayOfTheWeek"></div>
     <div data-testid="currentUTCTime" id="currentUTCTime"></div>
-    <div data-testid="currentUTCTime" id="currentUTCTimeInMillisecond"></div>
+    
 
  <!--************************Track**************************-->   
     <p data-testid="myTrack" id="myTrack">Track: Frontend</p>
