--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     </picture>
 
     <!--*******************************Date & Time*************************-->
-    <div data-testid="currentDayOfTheWeek" id="currentDayOfTheWeek"></div>
-    <div data-testid="currentUTCTime" id="currentUTCTime"></div>
+  
     
 
  <!--************************Track**************************-->   
@@ -26,6 +25,12 @@
 
   <!--********************************github profile********************-->  
     <a href="https://github.com/odeh-simon/Profile-page-hng" data-testid="githubURL" id="githubURL">My Github Repository</a>
+
+    <div id="dateTimeContainer">
+      <span data-testid="currentDayOfTheWeek" id="currentDayOfTheWeek"></span>
+      <span data-testid="currentUTCTime" id="currentUTCTime"></span>
+  </div>
+  
 
    </div> 
 
