--- a/index.html
+++ b/index.html
@@ -16,21 +16,19 @@
         <img src="/Images/myProfile.jpg" class="profileImage" alt="simon_Odeh" data-testid="slackDisplayImage">
     </picture>
 
-    <!--*******************************Date & Time*************************-->
+     <!--*******************************Date & Time*************************-->
+     <div id="dateTimeContainer">
+      <div data-testid="currentDayOfTheWeek" id="currentDayOfTheWeek"></div>
+      <div data-testid="currentUTCTime" id="currentUTCTime">12:00</div>
+  </div>
   
-    
-
+   
  <!--************************Track**************************-->   
-    <p data-testid="myTrack" id="myTrack">Track: Frontend</p>
+    <p data-testid="myTrack" id="myTrack">Frontend</p>
 
   <!--********************************github profile********************-->  
     <a href="https://github.com/odeh-simon/Profile-page-hng" data-testid="githubURL" id="githubURL">My Github Repository</a>
 
-    <div id="dateTimeContainer">
-      <span data-testid="currentDayOfTheWeek" id="currentDayOfTheWeek"></span>
-      <span data-testid="currentUTCTime" id="currentUTCTime"></span>
-  </div>
-  
 
    </div> 
 
