--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!--************************************profile image************************-->
     <picture >
-        <img src="/Images/myProfile.jpg" class="profileImage" alt="simon_Odeh" data-testid="slackDisplayImage">
+        <img src="/Images/myProfile.jpg" class="profileImage" alt="simon Odeh" data-testid="slackDisplayImage">
     </picture>
 
      <!--*******************************Date & Time*************************-->
