--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="container">
     <!--*****************************User name************************-->
-    <p data-testid="slackUserName" id="slackUserName"> Simon Odeh</p>
+    <p data-testid="slackUserName" > Simon Odeh</p>
 
     <!--************************************profile image************************-->
     <picture >
@@ -18,16 +18,16 @@
 
      <!--*******************************Date & Time*************************-->
      <div id="dateTimeContainer">
-      <div data-testid="currentDayOfTheWeek" id="currentDayOfTheWeek"></div>
-      <div data-testid="currentUTCTime" id="currentUTCTime">12:00</div>
+      <div data-testid="currentDayOfTheWeek" >Monday</div>
+      <div data-testid="currentUTCTime" >12:00</div>
   </div>
   
    
  <!--************************Track**************************-->   
-    <p data-testid="myTrack" id="myTrack">Frontend</p>
+    <p data-testid="myTrack"">Frontend</p>
 
   <!--********************************github profile********************-->  
-    <a href="https://github.com/odeh-simon/Profile-page-hng" data-testid="githubURL" id="githubURL">My Github Repository</a>
+    <a href="https://github.com/odeh-simon/Profile-page-hng" data-testid="githubURL" >My Github Repository</a>
 
 
    </div> 
