--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HNG Task-1</title>
+    <title>User Profile</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -12,22 +12,22 @@
     <p data-testid="slackUserName" > Simon Odeh</p>
 
     <!--************************************profile image************************-->
-    <picture >
-        <img src="/Images/myProfile.jpg" class="profileImage" alt="simon Odeh" data-testid="slackDisplayImage">
-    </picture>
+     <div>  
+         <img src="/Images/myProfile.jpg" data-testid="slackDisplayImage" alt="simon Odeh" >
+     </div>
 
      <!--*******************************Date & Time*************************-->
-     <div id="dateTimeContainer">
+     
       <div data-testid="currentDayOfTheWeek" >Monday</div>
       <div data-testid="currentUTCTime" >12:00</div>
-  </div>
+
   
    
  <!--************************Track**************************-->   
     <p data-testid="myTrack"">Frontend</p>
 
   <!--********************************github profile********************-->  
-    <a href="https://github.com/odeh-simon/Profile-page-hng" data-testid="githubURL" >My Github Repository</a>
+    <a href="https://github.com/odeh-simon/Profile-page-hng" data-testid="githubURL" target="_blank">My Github Repository</a>
 
 
    </div> 
