--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
    <div class="container">
     <!--*****************************User name************************-->
-    <p data-testid="slackUserName" > Simon Odeh</p>
+    <p data-testid="slackUserName" >Simon Odeh</p>
 
     <!--************************************profile image************************-->
      <div>  
-         <img src="/Images/myProfile.jpg" data-testid="slackDisplayImage" alt="simon Odeh" >
+         <img src="/Images/myProfile.jpg" data-testid="slackDisplayImage" alt="Simon Odeh" >
      </div>
 
      <!--*******************************Date & Time*************************-->
@@ -27,7 +27,7 @@
     <p data-testid="myTrack"">Frontend</p>
 
   <!--********************************github profile********************-->  
-    <a href="https://github.com/odeh-simon/Profile-page-hng" data-testid="githubURL" target="_blank">My Github Repository</a>
+    <a href="https://github.com/odeh-simon/Profile-page-hng" data-testid="githubURL" target="_blank">Github Repository</a>
 
 
    </div> 
